# grim

./: .build.yml  .gitignore  README.md  box.c  buffer.c  cairo_jpg.c  cairo_png.c  cairo_ppm.c  grim.1  grim.1.scd  main.c  meson.build  meson_options.txt  output-layout.c  render.c  write_jpg.c  write_png.c  write_ppm.c
contrib/completions/: meson.build
contrib/completions/bash/: grim.bash
contrib/completions/fish/: grim.fish
include/: box.h  buffer.h  cairo_jpg.h  cairo_png.h  cairo_ppm.h  grim.h  output-layout.h  render.h  write_jpg.h  write_png.h  write_ppm.h
protocol/: meson.build
